Center align items and prevent info button click to bubble down

--- a/src/styles/custom-base-styles.css
+++ b/src/styles/custom-base-styles.css
@@ -1,5 +1,5 @@
 #wcjcal-shadow-root {
   @apply block box-border;
-  @apply font-sans text-base;
+  @apply font-sans text-base leading-none;
   @apply border border-solid border-black;
 }
